objects/New_Business__c.object
<CustomObject>
    <fields>
        <fullName>API_Behavioral_Health_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary Behavioral Health Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Behavioral_Health__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary Behavioral Health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Dental_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary Dental Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Dental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary Dental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_EAP_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary EAP Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_EAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary EAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_FlexHour_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary FlexHour Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_FlexHour__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary FlexHour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Other_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary Other Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Pharmacy_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary Pharmacy Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Pharmacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary Pharmacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Stop_Loss_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary Stop Loss Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Stop_Loss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary Stop Loss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Vision_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary Vision Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Vision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>New_Business</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additonal_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additonal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aetna_Members__c</fullName>
        <label>Aetna Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aetna_Subscribers__c</fullName>
        <label>Aetna Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ancillary_Product_Interest_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary Product Interest Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ancillary_Retiree_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ancillary Retiree Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ancillary_Retiree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary Retiree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anthem_Local_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Incumbent Anthem Local Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anthem_Local_Members__c</fullName>
        <label>Anthem Local Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anthem_Local_Subscribers__c</fullName>
        <label>Anthem Local Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anthem_Local__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Incumbent Anthem Local</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Procurement_Spend__c</fullName>
        <description>B2B/Procurement Spend</description>
        <label>B2B/Procurement Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BSCA_Members__c</fullName>
        <label>BSCA Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSCA_Subs__c</fullName>
        <label>BSCA Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blue_Members__c</fullName>
        <label>Blue Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blue_Subscribers__c</fullName>
        <label>Blue Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIGNA_Members__c</fullName>
        <label>CIGNA Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIGNA_Subscribers__c</fullName>
        <label>CIGNA Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant_Aon_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultant Aon Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Aon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultant Aon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Gallagher_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultant Gallagher Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Gallagher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultant Gallagher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Lockton_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultant Lockton Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Lockton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultant Lockton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Mercer_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultant Mercer Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Mercer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultant Mercer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_Other_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultant Other Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultant Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_WTW_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultant WTW Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultant_WTW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultant WTW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultant_s__c</fullName>
        <label>Consultant(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aon</fullName>
                </value>
                <value>
                    <fullName>Mercer</fullName>
                </value>
                <value>
                    <fullName>WTW</fullName>
                </value>
                <value>
                    <fullName>Lockton</fullName>
                </value>
                <value>
                    <fullName>Gallagher</fullName>
                </value>
                <value>
                    <fullName>Other (specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_of_Care_Advantage__c</fullName>
        <description>Cost of Care Advantage</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost of Care Advantage</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_and_or_sensitive_networks_in_play__c</fullName>
        <description>Custom and or sensitive networks in play?</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom and or sensitive networks in play</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Castlight_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Engagement Castlight Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Castlight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement Castlight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Collective_Health_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Engagement Collective Health Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Collective_Health__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement Collective Health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Consultant_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Engagement Consultant Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Direct_Employer_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Engagement Direct To Employer Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Direct_Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement Direct To Employer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Leadership_Rel_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Engagement Leadership Rel Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Leadership_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement Leadership Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Other_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Engagement Other Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Procurement_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Engagement Procurement Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Procurement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement Procurement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_State_Affairs_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Engagement State Affairs Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_State_Affairs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement State Affairs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_of_Care_Current_Spend__c</fullName>
        <label>Estimated Cost of Care Current Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_of_Care__c</fullName>
        <label>Estimated Cost of Care Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Executive_Summary_Key_Notes__c</fullName>
        <description>Executive Summary / Key Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Executive Summary / Key Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HQ_State__c</fullName>
        <formula>TEXT(Account__r.HQ_State__c)</formula>
        <label>HQ State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_will_we_win__c</fullName>
        <description>How will we win?</description>
        <encryptionScheme>None</encryptionScheme>
        <label>How will we win?</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interaction_Summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Interaction Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Kaiser_Members__c</fullName>
        <label>Kaiser Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kaiser_Subs__c</fullName>
        <label>Kaiser Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_1_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Decision Maker 1 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Decision Maker 1</label>
        <referenceTo>ContactRelationship__c</referenceTo>
        <relationshipName>Key_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_1c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Decision Maker 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect Strategy KDM1</relationshipLabel>
        <relationshipName>Prospect_Strategy_KDM1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_2_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Decision Maker 2 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Decision Maker 2</label>
        <referenceTo>ContactRelationship__c</referenceTo>
        <relationshipName>Key_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_2c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Decision Maker 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect Strategy KDM2</relationshipLabel>
        <relationshipName>Prospect_Strategy_KDM2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_3_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Decision Maker 3 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Decision Maker 3</label>
        <referenceTo>ContactRelationship__c</referenceTo>
        <relationshipName>Key_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker_3c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Decision Maker 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect Strategy KDM3</relationshipLabel>
        <relationshipName>Prospect_Strategy_KDM3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Makers__c</fullName>
        <description>Key Decision Maker(s)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Decision Maker(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Geographies__c</fullName>
        <description>Key Geographies</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Geography 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Geography_1_Eligible_Employees__c</fullName>
        <label>Key Geography 1 Eligible Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Geography_1_Members__c</fullName>
        <label>Key Geography 1 Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Geography_2_Eligible_Employees__c</fullName>
        <label>Key Geography 2 Eligible Employees</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Geography_2_Members__c</fullName>
        <label>Key Geography 2 Members</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Geography_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Geography 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Geography_3_Eligible_Employees__c</fullName>
        <label>Key Geography 3 Eligible Employees</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Geography_3_Members__c</fullName>
        <label>Key Geography 3 Members</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Geography_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Geography 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Geography_4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Geography 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Geography_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Geography Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_Aetna_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Incumbent Aetna Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_Aetna__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Incumbent Aetna</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_BSCA_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Incumbent BSCA Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_Blue_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Incumbent Blue_Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_Blue_Shield_of_CA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Incumbent Blue Shield of CA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_Blue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Incumbent Blue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_CIGNA_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Incumbent CIGNA Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_CIGNA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Incumbent CIGNA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_Kaiser_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Incumbent Kaiser Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_Kaiser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Incumbent Kaiser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_Other_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Incumbent Other Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Incumbent Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_UHC_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Incumbent UHC Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_United_Health_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Incumbent United Health Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_United_TPA_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Incumbent United TPA Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_United_TPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Incumbent United TPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Incumbent_s__c</fullName>
        <label>Medical Incumbent(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>CIGNA</fullName>
                </value>
                <value>
                    <fullName>United Health Care</fullName>
                </value>
                <value>
                    <fullName>United TPA</fullName>
                </value>
                <value>
                    <fullName>Blue (specify)</fullName>
                </value>
                <value>
                    <fullName>Other (specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_New_Members_to_Anthem__c</fullName>
        <label>Net New Members to Anthem</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Obstacles_B2B_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Obstacles B2B Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obstacles_B2B__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obstacles B2B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obstacles_Cost_Of_Care_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Obstacles Cost Of Care Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obstacles_Cost_Of_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obstacles Cost Of Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obstacles_Fees_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Obstacles Fees Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obstacles_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obstacles Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obstacles_Incumbent_Rel_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Obstacles Incumbent Relationship Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obstacles_Incumbent_Rel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obstacles Incumbent Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obstacles_Network_Solutions_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Obstacles Network Solutions Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obstacles_Network_Solutions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obstacles Network Solutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obstacles_Other_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Obstacles Other Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obstacles_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obstacles Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obstacles_Past_Client_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Obstacles Past Client Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obstacles_Past_Client_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obstacles Past Client Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Obstacles_Product_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Obstacles Product Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obstacles_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obstacles Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Members__c</fullName>
        <label>Other Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Subscribers__c</fullName>
        <label>Other Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Members__c</fullName>
        <label>Potential Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Leverage_1_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship to Leverage #1 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Leverage_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship to Leverage #1</label>
        <referenceTo>ContactRelationship__c</referenceTo>
        <relationshipName>New_Business</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Leverage_1c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship to Leverage #1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect Strategy RTL1c</relationshipLabel>
        <relationshipName>Prospect_Strategy_RTL1c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Leverage_2_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship to Leverage #2 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Leverage_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship to Leverage #2</label>
        <referenceTo>ContactRelationship__c</referenceTo>
        <relationshipName>New_Business1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Leverage_2c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship to Leverage #2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect Strategy RTL2c</relationshipLabel>
        <relationshipName>Prospect_Strategy_RTL2c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Leverage_3_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship to Leverage #3 Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Leverage_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship to Leverage #3</label>
        <referenceTo>ContactRelationship__c</referenceTo>
        <relationshipName>New_Business2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Leverage_3c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship to Leverage #3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect Strategy RTL3c</relationshipLabel>
        <relationshipName>Prospect_Strategy_RTL3c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationships_To_Leverage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationships To Leverage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Employees__c</fullName>
        <formula>Account__r.Total_Employees__c</formula>
        <inlineHelpText>This is defined on the Account</inlineHelpText>
        <label>Total Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UHC_Members__c</fullName>
        <label>UHC Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>